--- a/src/OpenGameListWebApp_Chapter01/appsettings.json
+++ b/src/OpenGameListWebApp_Chapter01/appsettings.json
@@ -19,5 +19,15 @@
       "Pragma": "no-cache",
       "Expires": "-1"
     }
+  },
+  "Authentication": {
+    "Facebook": {
+      "AppId": "1872813092965355",
+      "AppSecret": "6fadc33731508139c579f079c158fff6"
+    },
+    "Google": {
+      "ClientId": "71578223273-rjsjqg9he4qnb6apvlkuukre1jqu7n0d.apps.googleusercontent.com",
+      "ClientSecret": "j_qhdHNydlDiUY_XtEztcDrj"
+    }
   }
 }
