--- a/src/OpenGameListWebApp_Chapter01/project.json
+++ b/src/OpenGameListWebApp_Chapter01/project.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "Microsoft.AspNet.Identity.EntityFramework": "2.2.1",
     "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.0",
+    "Microsoft.AspNetCore.Authentication.Facebook": "1.0.0",
+    "Microsoft.AspNetCore.Authentication.Google": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
